examples/good/09-02-function-shadowing.lagger
int main(){

    int f() {
        println(1);
        return 0;
    }

    f();

    int f() {
        println(2);
        return 0;
    }

    f();
    return 0;
}