examples/bad/06-03-invalid-no-arguments.lagger
int f(int n){
    return n;
}

int main(){
    f(2,3);
    return 0;
}